--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "babelify": "^7.2.0",
     "browserify": "^12.0.1",
     "express": "^4.13.3",
+    "express-handlebars": "^2.0.1",
     "gulp": "^3.9.0",
     "gulp-postcss": "^6.0.1",
     "gulp-rucksack": "^0.1.2",
     "gulp-sourcemaps": "^1.6.0",
+    "mongodb": "^2.1.2",
     "precss": "^1.3.0",
     "rucksack-css": "^0.8.5",
     "vinyl-source-stream": "^1.1.0"
