--- a/package.json
+++ b/package.json
@@ -26,6 +26,13 @@
     "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {
-    "body-parser": "^1.15.0"
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.15.0",
+    "connect-flash": "^0.1.1",
+    "express-session": "^1.13.0",
+    "mongoose": "^4.4.7",
+    "passport": "^0.3.2",
+    "passport-google-oauth": "^1.0.0",
+    "passport-local": "^1.0.0"
   }
 }
