--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.0",
     "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.1",
     "express-session": "^1.13.0",
     "mongoose": "^4.4.7",
     "passport": "^0.3.2",
