--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "mongoose": "^4.4.7",
     "passport": "^0.3.2",
     "passport-google-oauth": "^1.0.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "socket.io": "^1.4.5"
   }
 }
