--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express-handlebars": "^2.0.1",
     "express-session": "^1.13.0",
     "mongoose": "^4.4.7",
+    "negotiator": "^0.6.0",
     "passport": "^0.3.2",
     "passport-google-oauth": "^1.0.0",
     "passport-local": "^1.0.0",
