--- a/package.json
+++ b/package.json
@@ -26,18 +26,23 @@
     "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {
+    "babel-preset-es2015": "^6.6.0",
+    "babelify": "^7.2.0",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.0",
+    "browserify": "^12.0.2",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.1",
     "express": "^4.13.4",
     "express-handlebars": "^2.0.1",
     "express-session": "^1.13.0",
+    "gulp": "^3.9.1",
     "mongoose": "^4.4.7",
     "negotiator": "^0.6.0",
     "passport": "^0.3.2",
     "passport-google-oauth": "^1.0.0",
     "passport-local": "^1.0.0",
-    "socket.io": "^1.4.5"
+    "socket.io": "^1.4.5",
+    "vinyl-source-stream": "^1.1.0"
   }
 }
