--- a/package.json
+++ b/package.json
@@ -37,11 +37,14 @@
     "express-handlebars": "^2.0.1",
     "express-session": "^1.13.0",
     "gulp": "^3.9.1",
+    "gulp-postcss": "^6.1.0",
+    "gulp-sourcemaps": "^1.6.0",
     "mongoose": "^4.4.7",
     "negotiator": "^0.6.0",
     "passport": "^0.3.2",
     "passport-google-oauth": "^1.0.0",
     "passport-local": "^1.0.0",
+    "rucksack-css": "^0.8.5",
     "socket.io": "^1.4.5",
     "vinyl-source-stream": "^1.1.0"
   }
